Lorem content to show client

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title>Products Showroom Template</title>
+        <!-- <title>Products Showroom Template</title> -->
+        <title>Graciela Holguín | Joyería</title>
         <meta name="description" content="This is a collaboration with 'Los Feos Studio'; a solution for small business who wants to promote their products online with an affordable but professional approach. The template is fully customizable in order to be flexible for all kind of industries.">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -58,21 +59,21 @@
                 <nav id="main_nav">
                     <ul id="dropdown_menu" class="main_ul">
                         <li class="main_nav_link">
-                            <a href="#" title="Lookbook">
+                            <a href="products" title="Lookbook">
                                 <h3>Lookbook</h3>
                                 <span class="dropdown_arrow"></span>
                             </a>
 
                             <ul class="sub_ul">
                                 <li class="sub_nav_link">
-                                    <a href="#" title="Tempo 1">
-                                        <h4>Tempo 1</h4>
-                                        <h5>Seasons</h5>
+                                    <a href="products" title="Colección 1">
+                                        <h4>Colección 1</h4>
+                                        <h5>Gotas</h5>
                                     </a>
                                 </li>
                                 <li class="sub_nav_link last">
-                                    <a href="#" title="Tempo 2">
-                                        <h4>Tempo 2</h4>
+                                    <a href="products" title="Colección 2">
+                                        <h4>Colección 2</h4>
                                         <h5>Dulce Noche</h5>
                                     </a>
                                 </li>
@@ -81,26 +82,26 @@
 
 
                         <li class="main_nav_link">
-                            <a href="#"title="Shop">
+                            <a href="products"title="Shop">
                                 <h3>Shop</h3>
                                 <span class="dropdown_arrow"></span>
                             </a>
 
                             <ul class="sub_ul">
                                 <li class="sub_nav_link">
-                                    <a href="#" title="Chokers" >
+                                    <a href="products" title="Chokers" >
                                         <h6>Chokers</h6>
                                     </a>
                                 </li>
 
                                 <li class="sub_nav_link">
-                                    <a href="#" title="Brazaletes" >
+                                    <a href="products" title="Brazaletes" >
                                         <h6>Brazaletes</h6>
                                     </a>
                                 </li>
 
                                 <li class="sub_nav_link last">
-                                    <a href="#" title="Anillos" >
+                                    <a href="products" title="Anillos" >
                                         <h6>Anillos</h6>
                                     </a>
                                 </li>
@@ -127,103 +128,12 @@
 
             <!-- Body & Sections Content -->
 
-            <!-- <section class="home_left_images">
+            <section class="home_left_images">
                 <div class="big_img_container">
                     <img src="http://placehold.it/736x736" alt="Big Image">
                 </div>
 
                 <div class="filter_white"></div>
-            </section> -->
-
-            <section id="product_carousel">
-                <nav class="arrow_container left_arrow_nav">
-                    <a href="#" class="carousel_arrows left_carousel_arrow gray_arrow" data-slide="prev"></a>
-                </nav>
-
-                <div class="carousel_container">
-                    <h1 class="product_type">Chokers</h1>
-                    <div class="carousel_simple">
-                        <div class="inner_slider">
-                            <div class="product_card">
-                                <div class="img_container"><img src="http://placehold.it/165x210" alt="Product-1" title="Product-1"></div>
-
-                                <div class="info_container">
-                                    <h2 class="product_name" title="Product-1">Lorem Choker</h2>
-                                    <h3 class="product_price" title="Price-2">$0.00</h3>
-                                </div>
-                            </div>
-
-
-                            <div class="product_card">
-                                <div class="img_container"><img src="http://placehold.it/165x210" alt="Product-2" title="Product-2"></div>
-
-                                <div class="info_container">
-                                    <h2 class="product_name" title="Product-2">Lorem Choker</h2>
-                                    <h3 class="product_price" title="Price-3">$0.00</h3>
-                                </div>
-                            </div>
-
-
-                            <div class="product_card">
-                                <div class="img_container"><img src="http://placehold.it/165x210" alt="Product-3" title="Product-3"></div>
-
-                                <div class="info_container">
-                                    <h2 class="product_name" title="Product-3">Lorem Choker</h2>
-                                    <h3 class="product_price" title="Price-4">$0.00</h3>
-                                </div>
-                            </div>
-
-
-                            <div class="product_card">
-                                <div class="img_container"><img src="http://placehold.it/165x210" alt="Product-4" title="Product-4"></div>
-
-                                <div class="info_container">
-                                    <h2 class="product_name" title="Product-4">Lorem Choker</h2>
-                                    <h3 class="product_price" title="Price-5">$0.00</h3>
-                                </div>
-                            </div>
-
-
-                            <div class="product_card">
-                                <div class="img_container"><img src="http://placehold.it/165x210" alt="Product-5" title="Product-5"></div>
-
-                                <div class="info_container">
-                                    <h2 class="product_name" title="Product-5">Lorem Choker</h2>
-                                    <h3 class="product_price" title="Price-6">$0.00</h3>
-                                </div>
-                            </div>
-
-                            <div class="product_card">
-                                <div class="img_container"><img src="http://placehold.it/165x210" alt="Product-6" title="Product-6"></div>
-
-                                <div class="info_container">
-                                    <h2 class="product_name" title="Product-6">Lorem Choker</h2>
-                                    <h3 class="product_price" title="Price-1">$0.00</h3>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <nav class="arrow_container right_arrow_nav">
-                    <a href="#" class="carousel_arrows right_carousel_arrow gray_arrow" data-slide="next"></a>
-                </nav>
-
-                <a href="#" class="return_to_collection">
-                    <div class="return_arrow">
-                        <div class="draw_arrow"></div>
-                    </div>
-
-                    <div class="return_data">
-                        <div class="collection_type">
-                            <h4>Tempo 1</h4>
-                        </div>
-                        <div class="collection_name">
-                            <h5>Seasons</h5>
-                        </div>
-                    </div>
-                </a>
-                
             </section>
 
 
