Second lorem content to show client. Now animated

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <div class="innerWrap">
 
             <header>
-                <div id="main_logo">
+                <div id="main_logo" class="fadeLeftIn">
                     <a href="#">
                         <img src="img/graciela_holguin.png" alt="Graciela Holguín Joyería" title="Graciela Holguín Joyería">
                     </a>
@@ -58,7 +58,7 @@
                 <!-- Dropdown Navigator -->
                 <nav id="main_nav">
                     <ul id="dropdown_menu" class="main_ul">
-                        <li class="main_nav_link">
+                        <li class="main_nav_link fadeLeftIn">
                             <a href="products" title="Lookbook">
                                 <h3>Lookbook</h3>
                                 <span class="dropdown_arrow"></span>
@@ -81,7 +81,7 @@
                         </li>
 
 
-                        <li class="main_nav_link">
+                        <li class="main_nav_link fadeLeftIn">
                             <a href="products"title="Shop">
                                 <h3>Shop</h3>
                                 <span class="dropdown_arrow"></span>
@@ -109,13 +109,13 @@
                             </ul>
                         </li>
 
-                        <li class="main_nav_link">
+                        <li class="main_nav_link fadeLeftIn">
                             <a href="#" title="About">
                                 <h3>About</h3>
                             </a>
                         </li>
 
-                        <li class="main_nav_link">
+                        <li class="main_nav_link fadeLeftIn">
                             <a href="#" title="Contact">
                                 <h3>Contact</h3>
                             </a>
@@ -129,8 +129,8 @@
             <!-- Body & Sections Content -->
 
             <section class="home_left_images">
-                <div class="big_img_container">
-                    <img src="http://placehold.it/736x736" alt="Big Image">
+                <div class="big_img_container fadeUpIn">
+                    <!-- <img src="http://placehold.it/736x736" alt="Big Image"> -->
                 </div>
 
                 <div class="filter_white"></div>
@@ -138,8 +138,8 @@
 
 
             <footer>
-                <li class="firstBttn"><a href="https://www.facebook.com/grajoyeria/" target="_blank" title="Facebook"><img src="img/rrss-fb.png" alt="Facebook"></a></li>
-                <li class="secondBttn"><a href="https://www.instagram.com/grajoyeria/" target="_blank" title="Instagram"><img src="img/rrss-ig.png" alt="Instagram"></a></li>
+                <li class="firstBttn fadeLeftIn"><a href="https://www.facebook.com/grajoyeria/" target="_blank" title="Facebook"><img src="img/rrss-fb.png" alt="Facebook"></a></li>
+                <li class="secondBttn fadeLeftIn"><a href="https://www.instagram.com/grajoyeria/" target="_blank" title="Instagram"><img src="img/rrss-ig.png" alt="Instagram"></a></li>
             </footer>
         </div>
         
@@ -149,6 +149,22 @@
         <script src="js/vendor/modernizr-2.8.3.min.js"></script>
         <script src="js/plugins.js"></script>
         <script src="js/main.js"></script>
+        <script>
+            $(window).on("load",function(){
+                var firstObjects = $('.fadeLeftIn');
+
+                $.each($('.fadeLeftIn'), function(index, el) {
+                    setTimeout(function(){
+                       $(el).removeClass('fadeLeftIn');
+
+                       if (index == (firstObjects.length - 1)) {
+                            $('.fadeUpIn').removeClass('fadeUpIn');
+                       };
+
+                    }, ( index * 250 ));
+                });
+            });
+        </script>
 
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
         <script>
